# hsCats

./: .gitignore  README.md  nb  vis
cc/: CMakeLists.txt  README.md
notebooks/: 00_preface.ipynb  01_category_the_essence_of_composition.ipynb  02_types_and_functions.ipynb  03_categories_great_and_small.ipynb  03_categories_great_and_small_vis.ipynb  04_kleisli_categories.ipynb  05_products_and_coproducts.ipynb  06_simple_algebraic_data_types.ipynb  07_functors.ipynb  08_functorality.ipynb  09_function_types.ipynb  10_natural_transformations.ipynb  11_declarative_programming.ipynb  12_limits_and_colimits.ipynb  20_monads_programmers_definition.ipynb  21_monads_and_effects.ipynb  Untitled.ipynb
py/: README.md  pyproject.toml
py/tests/: test_pycatsnw.py
