[tool.poetry]
name = "pycatsnw"
version = "0.1.0"
description = ""
authors = ["Wei Ning (DA) <wei.ning@digitalasset.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pylint = "^2.7.1"
yapf = "^0.30.0"
mypy = "^0.812"
jupyter = "^1.0.0"
matplotlib = "^3.3.4"
ipython-tikzmagic = {git = "https://github.com/mkrphys/ipython-tikzmagic.git"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
